fix nav bar spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,7 +13,7 @@ body {
   --liniear-gradient-color-1: linear-gradient(to bottom right,#db2777,#db2777);
   --liniear-gradient-color-2: linear-gradient(to bottom right,#facc15,#f97316);
   --loader-color-primary: #facc15;
-  --loader-color-secondary: #f97316;
+  --loader-color-secondary: #6366f1;
   --icon-color: #f97316;
 
   --gradient-50: rgb(255, 242, 203);
@@ -254,13 +254,21 @@ body,
 
       .header-menu {
         width: 100%;
+        // background: white;
+        // height: 30vh;
+        display: flex;
+        align-items: centrier;
+        justify-content: center;
 
         nav {
-          text-align: left;
+          text-align: right;
           padding: 8px 0;
-          width: 100%;
+          width: 90%;
+          margin-left: 70vw;
+          margin-right: 10%;
 
           >a {
+            display: flex;
             font-size: .83em;
             margin-right: 12px;
 
@@ -269,9 +277,10 @@ body,
             }
           }
           > i {
-            flex: 1;
-            display: flex;
+            flex: 0;
+            display: relative;
             justify-content: flex-end;
+            margin-right: -10px;
           }
 
         }
